<resources>
    <string name="app_name">Qinote</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="tags">Tags</string>
    <string name="action_favorites">Favorites</string>
    <string name="communicate">Communicate</string>
    <string name="action_send_feedback">Send Feedback</string>
    <string name="action_rate_us">Rate us</string>
    <string name="exit_to_app">Exit</string>

    <string name="note_option_button">...</string>

    <string name="action_delete_all_notes">Delete All Notes</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a pet</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="action_insert_image">Insert image</string>
    <string name="add_picture">Add picture</string>
    <string name="action_choose_image">Choose image</string>
    <string name="action_take_photo">Take photo</string>

    <string name="action_mark_as_favorite">Mark as Favorite</string>
    <string name="action_remove_from_favorite">Remove from Favorite</string>
    <string name="action_archive">Archive</string>
    <string name="action_unarchive">Unarchive</string>
    <string name="action_delete">Delete</string>
    <string name="action_note_BG_color">Note BG Color</string>
    <string name="note_color">Note Color</string>
    <string name="action_todo">ToDo</string>
    <string name="undo">UNDO</string>

    <string name="hint_type_a_note">Type a note ...</string>
    <string name="add_a_tag">Add a #tag</string>
    <string name="tag_grocery">#grocery</string>
    <string name="tag_movies">#movies</string>
    <string name="tag_receipts">#receipts</string>
    <string name="tag_restaurant">#restaurant</string>
    <string name="tag_todo">#todo</string>
    <string name="tag_personal">#personal</string>
    <string name="tag_recipes">#recipes</string>
    <string name="tag_travel">#travel</string>
    <string name="tag_misc">#misc</string>
    <string name="done">DONE</string>
    <string name="remove">Remove</string>

    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="contact_us">Contact Us</string>

    <string name="Image_Deleted">Image Deleted</string>
    <string name="Note_Archived">Note Archived</string>
    <string name="Note_Unarchived">Note Unarchived</string>
    <string name="No_Notes_Found">No Notes Found</string>
    <string name="editor_insert_note_successful">insert_note_successful</string>
    <string name="editor_insert_note_failed">insert_note_failed</string>
    <string name="editor_update_note_successful">update_note_successful</string>
    <string name="editor_update_note_failed">update_note_failed</string>
    <string name="editor_delete_note_successful">delete_note_successful</string>
    <string name="editor_delete_note_failed">delete_note_failed</string>
    <string name="delete_dialog_msg">Delete this pet?</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>

    <string name="content_authority">com.example.qinote</string>
    <string name="title_activity_picture_viewer">PictureViewerActivity</string>
    
    <!--Searchable Configuration-->
    <string name="app_label">Qinote</string>
    <string name="search_hint">Search notes</string>
</resources>
