<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_insert_image"
        android:icon="@drawable/ic_insert_photo_white_48dp"
        android:title="@string/action_insert_image"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/action_color"
        android:icon="@drawable/ic_color_lens_white_48dp"
        android:title="@string/action_note_BG_color"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_todo"
        android:icon="@drawable/ic_list_white_48dp"
        android:title="@string/action_todo"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="101"
        android:title="@string/action_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mark_as_favorite"
        android:orderInCategory="102"
        android:title="@string/action_mark_as_favorite"
        app:showAsAction="never" />
    <item android:id="@+id/action_remove_from_favorite"
        android:orderInCategory="103"
        android:title="@string/action_remove_from_favorite"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_archive"
        android:orderInCategory="104"
        android:title="@string/action_archive"
        app:showAsAction="never" />
    <item android:id="@+id/action_unarchive"
        android:orderInCategory="105"
        android:title="@string/action_unarchive"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="106"
        android:title="@string/action_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="107"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>