<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_white_48dp"
            android:title="@string/action_favorites" />
        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/ic_done_white_48dp"
            android:title="@string/action_archive" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_white_48dp"
                android:title="@string/action_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_feedback_white_48dp"
                android:title="@string/action_send_feedback" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_white_48dp"
                android:title="@string/action_settings"/>
            <item
                android:id="@+id/nav_exit_to_app"
                android:icon="@drawable/ic_exit_to_app_white_48dp"
                android:title="@string/exit_to_app"/>
        </menu>
    </item>

</menu>
